--- a/css/style.css
+++ b/css/style.css
@@ -1,184 +1,119 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-#cabecera{
-    height: 5.5vh;
-}
-
-#imgenvios{
-    height: 5vh;
-}
-
-#imgdescuentos{
-    height: 4.5vh;
-}
-
-
-#sobrenosotrosbody{
-    height: 100vh;
-    display: grid;
-    grid-template-rows: 0.25fr 1fr 0.25fr;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: 
-    "header header header"
-    "main main main"
-    "footer footer footer"
-    ;
-}
-
-#h2sobrenosotros{
-    display: flex;
-    justify-content: center;
-    color:white;
-}
-
-#p1{
-    display: flex;
-    justify-content: center;
-    color:white;
-}
-
-#p2{
-    display: flex;
-    text-align: center;
-    color:white;
-}
-
-#sobrenosotrosheader{
+#sobrenosotrosbody {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 0.25fr 1fr 0.25fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "header header header"
+ "main main main"
+ "footer footer footer"; }
+  #sobrenosotrosbody #sobrenosotrosheader {
     background-color: #000000;
-    grid-area: header;
-}
-
-#logo{
-    background-color: rgb(0, 0, 0);
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-#imglogo{
-    height: 15vh;
-}
-
-
-main{
-    background-color: rgb(255, 255, 255);
-    height: 100vh;
-}
-
-#sobrenosotrosmain{
+    grid-area: header; }
+    #sobrenosotrosbody #sobrenosotrosheader #h2sobrenosotros {
+      display: flex;
+      justify-content: center;
+      color: white; }
+    #sobrenosotrosbody #sobrenosotrosheader #p1 {
+      display: flex;
+      justify-content: center;
+      color: white; }
+    #sobrenosotrosbody #sobrenosotrosheader #p2 {
+      display: flex;
+      text-align: center;
+      color: white; }
+  #sobrenosotrosbody #sobrenosotrosmain {
     background-color: aqua;
-    display: grid;
-    grid-template-columns:  0.25fr 1fr 0.25fr;
-    grid-template-areas: 
-    "sect1 sect2 sect3";
-}
-
-#nosotrosimg{
-    height: 57vh;
-    display: flex;
-    text-align: center;
-    
-}
-
-#p3{
-    display: flex;
-    text-align: center;
-    color:white;
-}
-
-#p4{
-    display: flex;
-    text-align: center;
-    color:white;
-}
-
-#p5{
-    display: flex;
-    text-align: center;
-    color:white;
-}
-
-#sobrenosotrossect1{
-    background-color: rgb(0, 0, 0);
-    grid-area: sect1;
-}
-
-#sobrenosotrossect2{
-    background-color: rgb(0, 0, 0);
-    grid-area: sect2;
-
-}
-
-#sobrenosotrossect3{
-    background-color: rgb(0, 0, 0);
-    grid-area: sect3;
-}
-
-#portada{
-    height: 100%;
-    width: 100%;
-}
-
-#divisor{
-    background-color: rgb(255, 255, 255);
-    height: 20vh;
-}
-
-#imgaccesorios{
-    height: 100vh;
-}
-
-#mainNew{
-    background-color: rgb(255, 255, 255);
-    height: 82vh;
-}
-
-#mainCalzado{
-    height: 80vh;
-}
-
-#mainDeSuperior{
-    height: 195vh;
-}
-
-#mainInferiores{
-    height: 75vh;
-}
-
-#mainAccesorios{
-    height: 75vh;
-}
-
-#sobrenosotrosmain{
-    background-color: antiquewhite;
     height: auto;
     grid-area: main;
-}
-
-#destacados{
-    height: 6vh;
-    background-color: rgb(255, 255, 255);
-}
-
-#hot{
-    height: 92vh;
-    background-color: #ffffff;
-}
-
-#logocontactos{
-    height: 10vh;
-    background-color: black;
-}
-
-#red1{
-    height: 21vh;
-}
-
-#sobrenosotrosfooter{
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 0.5fr;
+    grid-template-areas: "sect1 sect2 sect3"; }
+    #sobrenosotrosbody #sobrenosotrosmain #sobrenosotrossect1 {
+      background-color: black;
+      grid-area: sect1; }
+      #sobrenosotrosbody #sobrenosotrosmain #sobrenosotrossect1 #p3 {
+        display: flex;
+        text-align: center;
+        color: white; }
+    #sobrenosotrosbody #sobrenosotrosmain #sobrenosotrossect2 {
+      background-color: black;
+      grid-area: sect2; }
+      #sobrenosotrosbody #sobrenosotrosmain #sobrenosotrossect2 #nosotrosimg {
+        height: 57vh;
+        display: flex;
+        text-align: center; }
+    #sobrenosotrosbody #sobrenosotrosmain #sobrenosotrossect3 {
+      background-color: black;
+      grid-area: sect3; }
+      #sobrenosotrosbody #sobrenosotrosmain #sobrenosotrossect3 #p4 {
+        display: flex;
+        text-align: center;
+        color: white; }
+    #sobrenosotrosbody #sobrenosotrosfooter {
     background-color: #000000;
-    grid-area: footer;
-}
+    grid-area: footer; }
+    #sobrenosotrosbody #sobrenosotrosfooter #p5 {
+      display: flex;
+      text-align: center;
+      color: white; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+#cabecera {
+  height: 5.5vh; }
+
+#imgenvios {
+  height: 5vh; }
+
+#imgdescuentos {
+  height: 4.5vh; }
+
+#logo {
+  background-color: black;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+  #logo #imglogo {
+    height: 15vh; }
+
+main {
+  background-color: white;
+  height: 100vh; }
+  main #portada {
+    height: 100%;
+    width: 100%; }
+
+#mainCalzado {
+  height: 80vh; }
+
+#mainDeSuperior {
+  height: 195vh; }
+
+#mainInferiores {
+  height: 75vh; }
+
+#mainAccesorios {
+  height: 75vh; }
+
+#destacados {
+  height: 6vh;
+  background-color: white; }
+
+#hot {
+  height: 92vh;
+  background-color: #ffffff; }
+
+#logocontactos {
+  height: 10vh;
+  background-color: black; }
+
+#red1 {
+  height: 21vh; }
