--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -4,19 +4,18 @@
     box-sizing: border-box;
 }
 
-#cabecera{
+body{
+    header{
+        #cabecera{
     height: 5.5vh;
-}
-
-#imgenvios{
+    }
+       #imgenvios{
     height: 5vh;
-}
-
-#imgdescuentos{
+    }
+    #imgdescuentos{
     height: 4.5vh;
-}
-
-#logo{
+    }
+    #logo{
     background-color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
@@ -24,48 +23,56 @@
     #imglogo{
         height: 15vh;
     }
-}
+    }
+ }
 
-main{
+    #divisor{
+    height: 20vh;
+ }
+
+
+    main{
     background-color: rgb(255, 255, 255);
     height: 100vh;
     #portada{
         height: 100%;
         width: 100%;
     }
-}
+ }
 
-#mainCalzado{
+ #mainCalzado{
     height: 80vh;
-}
+ }
 
-#mainDeSuperior{
+ #mainDeSuperior{
     height: 195vh;
-}
+ }
 
-#mainInferiores{
+ #mainInferiores{
     height: 75vh;
-}
+ }
 
-#mainAccesorios{
+ #mainAccesorios{
     height: 75vh;
-}
-
-#destacados{
+ }
+ 
+ #destacados{
     height: 6vh;
     background-color: rgb(255, 255, 255);
-}
+ }
 
-#hot{
+ #hot{
     height: 92vh;
     background-color: #ffffff;
-}
+ }
 
-#logocontactos{
+ #logocontactos{
     height: 10vh;
     background-color: black;
-}
+ }
 
-#red1{
+ #red1{
     height: 21vh;
+ }
+
 }
