--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -7,13 +7,7 @@
 body{
     header{
         #cabecera{
-    height: 5.5vh;
-    }
-       #imgenvios{
-    height: 5vh;
-    }
-    #imgdescuentos{
-    height: 4.5vh;
+    height: 3.3vh;
     }
     #logo{
     background-color: rgb(0, 0, 0);
@@ -22,6 +16,9 @@ body{
     box-sizing: border-box;
     #imglogo{
         height: 15vh;
+    }
+    .navbar.custom-navbar {
+      height: 40px;
     }
     }
  }
@@ -33,36 +30,40 @@ body{
 
     main{
     background-color: rgb(255, 255, 255);
-    height: 100vh;
+    height: auto;
     #portada{
         height: 100%;
         width: 100%;
     }
  }
 
+ #mainNew{
+   height: auto;
+ }
+
  #mainCalzado{
-    height: 80vh;
+    height: auto;
  }
 
  #mainDeSuperior{
-    height: 195vh;
+    height: auto;
  }
 
  #mainInferiores{
-    height: 75vh;
+    height: auto;
  }
 
  #mainAccesorios{
-    height: 75vh;
+    height: auto;
  }
  
  #destacados{
-    height: 6vh;
+    height: auto;
     background-color: rgb(255, 255, 255);
  }
 
  #hot{
-    height: 92vh;
+    height: 120vh;
     background-color: #ffffff;
  }
 
