--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -7,10 +7,10 @@
 body{
     header{
         #cabecera{
-    height: 3.3vh;
+    height: 3.7vh;
     }
     #logo{
-    background-color: rgb(0, 0, 0);
+    background-color: #f8f8f8;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -24,7 +24,7 @@ body{
  }
 
     #divisor{
-    height: 20vh;
+    height: 18vh;
  }
 
 
@@ -63,7 +63,7 @@ body{
  }
 
  #hot{
-    height: 120vh;
+    height: auto;
     background-color: #ffffff;
  }
 
